Resolves: tdf#132143 make placeholder nodes unselectable

Change-Id: I13bcb43122f6b82114f287f13da20a584bf5f349